syntax = "proto3";

package product.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/codeharik/Atlantic/database/api/product/v1";

service ProductService {
  rpc CheckProductQuantity(CheckProductQuantityRequest) returns (CheckProductQuantityResponse) {}

  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}

  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}

  rpc GetProductByID(GetProductByIDRequest) returns (GetProductByIDResponse) {}

  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}

  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
}

message Cart {
  string id = 1;
  string user_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CartItem {
  string id = 1;
  string cart_id = 2;
  string product_id = 3;
  int32 quantity = 4;
}

message CheckProductQuantityRequest {
  string id = 1;
}

message CheckProductQuantityResponse {
  int32 value = 1;
}

message CreateProductRequest {
  string id = 1;
  int32 quantity = 2;
  int64 amount_units = 3;
  int32 amount_nanos = 4;
  string amount_currency = 5;
}

message CreateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {}

message GetProductByIDRequest {
  string id = 1;
}

message GetProductByIDResponse {
  Product product = 1;
}

message GooseDbVersion {
  int32 id = 1;
  int64 version_id = 2;
  bool is_applied = 3;
  google.protobuf.Timestamp tstamp = 4;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product list = 1;
}

message Order {
  string id = 1;
  string user_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  int64 amount_units = 5;
  int32 amount_nanos = 6;
  string amount_currency = 7;
  string status = 8;
  string payment_status = 9;
}

message OrderItem {
  string id = 1;
  string order_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  int64 amount_units = 5;
  int32 amount_nanos = 6;
  string amount_currency = 7;
}

message Product {
  string id = 1;
  int32 quantity = 2;
  int64 amount_units = 3;
  int32 amount_nanos = 4;
  string amount_currency = 5;
}

message ProductComment {
  string id = 1;
  google.protobuf.StringValue comment = 2;
}

message ProductReview {
  string id = 1;
  string user_id = 2;
  string product_id = 3;
  int32 rating = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateProductRequest {
  string id = 1;
  int32 quantity = 2;
  int64 amount_units = 3;
  int32 amount_nanos = 4;
  string amount_currency = 5;
}

message UpdateProductResponse {}

message User {
  string id = 1;
  google.protobuf.StringValue username = 2;
  google.protobuf.StringValue password_hash = 3;
  google.protobuf.StringValue email = 4;
  bool verified = 5;
  google.protobuf.StringValue phone_number = 6;
  google.protobuf.StringValue gender = 7;
  int64 role = 8;
  google.protobuf.Timestamp date_of_birth = 9;
  string address = 10;
  int32 balance = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}
